--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                   Personal portfolio website showcasing projects, skills, and
                   contact information. Built with HTML, CSS, and JavaScript.
                 </p>
-                <a href="#" class="btn btn-outline-neon mt-3"
+                <a href="https://github.com/michaelhawat/Portfolio" class="btn btn-outline-neon mt-3"
                   target="_blank"><i class="fab fa-github me-2"></i>Source Code</a>
                   </div>
                   </div>
