--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
             <i class="fas fa-envelope fa-3x mb-3"></i>
             <h4>Email</h4>
             <a href="michael.hawat@std.balamand.edu.lb" class="d-block text-neon fw-bold"
-              aria-label="Send an email to Miled Issa">
+              aria-label="Send an email to Michael Hawat">
               Email Me
             </a>
           </div>
